<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DeckActivity">

    <Button
            android:text="@string/create"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"/>

    <TextView
            android:text="@string/card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="20sp"/>

    <EditText
            android:hint="@string/custom_scrum_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            card_view:cardCornerRadius="20dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark" android:layout_margin="26dp"
            android:layout_marginStart="26dp" card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginBottom="26dp"
            android:layout_marginTop="26dp" card_view:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginEnd="26dp" card_view:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_scrum_card"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="28sp"/>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>