<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DeckActivity" android:id="@+id/constraintLayout">

    <Button
            android:text="@string/create"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"/>

    <TextView
            android:text="@string/deck_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="20sp"/>

    <EditText
            android:hint="@string/custom_scrum_deck"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <ImageView android:layout_width="match_parent"
                   android:src="@mipmap/ic_launcher" android:layout_height="0dp"
                   app:layout_constraintStart_toStartOf="parent"
                   android:id="@+id/imageView"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toTopOf="@+id/infoText" android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_scrum_deck"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:textSize="28sp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>